--- a/Docker Swarm/docker-compose.superagent.negotiate.yml
+++ b/Docker Swarm/docker-compose.superagent.negotiate.yml
@@ -4,10 +4,7 @@ services:
   
   dockersuperagent1:
     hostname: dockersuperagent1
-    build: 
-      context: ./inits
-      dockerfile: Dockerfile.superagent
-    image: azure-devops-linux-superagent:latest
+    image: keskinkaan/azuredevops-linux-agent-auth-negotiate:jdk17-mvn3.8-nodejs16-py3-go1.17-dockercli-buildah-sonarscanner4.6-azp2.153.1
     container_name: dockersuperagent1
     restart: unless-stopped
     volumes:
